# life-timeline

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: __init__.py  errors.py  models.py  template_setup.py  util.py  wsgi.py
app/blueprints/: __init__.py
app/blueprints/auth/: __init__.py  cli.py  forms.py  urls.py  views.py
app/blueprints/core/: __init__.py  cli.py  forms.py  urls.py  views.py
app/exts/: __init__.py  admin.py  login.py
app/services/: event.py  user.py
app/templates/: 404.html  base.html  macros.html
app/templates/auth/: login.html  register.html
app/templates/core/: index.html  macros.html
app/templates/core/forms/: event.html
app/templates/includes/: messages.html  navbar.html
db/: schema.sql
db/migrations/: 20250312001601_initial.sql
doc/: TODO.md
scripts/: download_vendor.sh
tests/: test_event.py  test_util.py
